# CRFE

./: .gitignore  README.md  pixi.toml  pyproject.toml  readme.md
CRFE/: _crfe.py
Datasets/Coronary artery disease dataset/: analisis.ipynb  attributes.npy  data.csv  data_h.csv  plotter.ipynb  readme  script_dataset_loader.py  target.npy
Examples/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py
Paper/: compute_confidence_intervals.py  conformal_module.py  main.py  plotter_stability.py  rfe_module.py  rfe_module_strict.py  stability_toolkit.py  synthetic_generator.py
Paper Code/: readme
Paper Code/Datasets/Coronary artery disease dataset/: features.npy  heart-disease_readme_2
Paper Code/Datasets/Dermatology dataset/: script_dataset_loader.py
Paper Code/jupyter plots/: readme.md
Paper Code/jupyter plots/DATA/: CRFE_CLASSICAL_both_30.pickle  CRFE_CLASSICAL_both_31.pickle  CRFE_CLASSICAL_both_32.pickle  CRFE_CLASSICAL_both_33.pickle  CRFE_both_30.pickle  CRFE_both_31.pickle  CRFE_both_32.pickle  CRFE_both_33.pickle  RFE_CLASSICAL_both_30.pickle  RFE_CLASSICAL_both_31.pickle  RFE_CLASSICAL_both_32.pickle  RFE_CLASSICAL_both_33.pickle  RFE_both_30.pickle  RFE_both_31.pickle  RFE_both_32.pickle  RFE_both_33.pickle  hist_artificial.csv  (+3 more)
Paper/lambda_experiments/: crfe_lambda_trace.py  run_lambda_sensitivity.py
Paper/runtime_comparisons/: fairness_report.py  main_runtime.py  plotter.py
Paper/stopping_experiments/: generate_distribution_plots.py  main_stopping.py  stopping_experiments_sensitivity.py  stopping_module_sensitivity.py
(+5 files in other folders)
