[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CRFE"
version = "0.1.1"
description = "Conformal Recursive Feature Elimination"
readme = "readme.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Digital Medicine Research Group - UNAV" }
]
dependencies = [
  "numpy",
  "scikit-learn>=1.2.2"
]

[tool.setuptools]
package-dir = { "" = "Library" }

[tool.setuptools.packages.find]
where = ["Library"]
include = ["CRFE*"]
